# chopper

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/core/: application.rs  device.rs  mod.rs  platform.rs
src/render/: backend.rs  command.rs  effect.rs  error.rs  mesh.rs  mod.rs  pipeline.rs  render.rs
src/system/: entity.rs  mod.rs  render.rs  resource.rs  scene.rs  shaders.rs
src/world/: mod.rs  scene.rs  shaders.rs
